objects/ASI_CRM_TOV__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Total_Amount__c</fullName>
        <label>JDE Total Amount</label>
        <summarizedField>ASI_CRM_TOV_Detail__c.ASI_CRM_CN_Copy_SUM__c</summarizedField>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Free_Goods_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Goods Request</label>
        <referenceTo>ASI_FOC_Free_Goods_Request__c</referenceTo>
        <relationshipLabel>TOVs</relationshipLabel>
        <relationshipName>TOVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF SO Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TOVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Request_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF SO Request Number</label>
        <referenceTo>ASI_KOR_Sales_Order_Request__c</referenceTo>
        <relationshipLabel>TOVs</relationshipLabel>
        <relationshipName>TOVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_Number__c</fullName>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_Type__c</fullName>
        <label>SO Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Number_of_Line__c</fullName>
        <label>Total Number of Line</label>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_TOV_Qty__c</fullName>
        <label>Total TOV Qty</label>
        <summarizedField>ASI_CRM_TOV_Detail__c.ASI_CRM_Order_QTY__c</summarizedField>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>TOV</label>
    <listViews>
        <fullName>ASI_CRM_CN_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <label>All CN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_FOC_SO</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <filters>
            <field>ASI_CRM_Free_Goods_Request__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Dispatched</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>S3</value>
        </filters>
        <label>CN FOC TOV - Dispatched</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_SO</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <filters>
            <field>ASI_CRM_SF_SO_Request_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Dispatched</value>
        </filters>
        <label>CN SO TOV - Dispatched</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_TOV_not_Received</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>notEqual</operation>
            <value>Received</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>S3,S4</value>
        </filters>
        <label>TOV not Received (S3,S4)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_POSM_TOV_Dispatched</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <filters>
            <field>ASI_CRM_Free_Goods_Request__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Dispatched</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>P2</value>
        </filters>
        <label>CN POSM TOV - Dispatched</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TOV-{YY}{0000000}</displayFormat>
        <label>TOV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TOVs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_TOV</fullName>
        <active>true</active>
        <label>CN TOV</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>